FIX: Overlapped excerpt on pinned topics

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -4,6 +4,10 @@
   display: none;
 }
 
+.voting-category .topic-list .pinned .topic-excerpt {
+  margin-left: 65px;
+}
+
 .voting-category.list-container {
   
   @if $use_compact_width == "true" {
